--- a/Prva Stranka/index.html
+++ b/Prva Stranka/index.html
@@ -129,6 +129,29 @@
                 </div>
             </div>
         </div>
+
+        <div class="container-labs">
+            <div class = "labs">
+                <h4>
+                    V akých Laboch
+                </h4>
+                <span> možeš študovať?</span>
+            </div>
+            <div class="hybridLab">
+                <p><span>Hybrid</span>Lab</p>
+                <p class="hybridLab-text">Študenti sa učia vyvíjať hybridné aplikácie v HTML, PHP, CSS, JavaScript, Ionicu, Vue a OctoberCMS.</p>
+
+            </div>
+            <div class="gamesLab">
+                <p><span>Games</span>Lab</p>
+                <p class="gamesLab-text">Študenti vyvíjajú mobilné hry v Unity a GDevelop, učia sa tvoriť 2D grafiku v programe Piskel, 3D grafiku v programe Blender a herný dizajn.</p>
+            </div>
+            <div class="appsLab">
+                <p><span>Apps</span>Lab</p>
+                <p class="appsLab-text">Študenti sa učia vyvíjať mobilné aplikácie v C# a Xamarin.forms a webové aplikácie v Java a Angular JS.</p>
+            </div>
+
+        </div>
     </section>
 
     </div>
