velmi male zmeny

--- a/Prva Stranka/index.html
+++ b/Prva Stranka/index.html
@@ -325,7 +325,36 @@
         </div>
 
     </section>
+    <section>
+        <div class ="container-studenske-projekty">        
+                <div class="studenske-projekty">
+                    <div class="studenske-projekty-text">
+                        <h2>Pozrite si <span>študentské projekty</span></h2>
+                        <p>Stredoškoláci v OpenLaboch pracujú na reálnych projektoch v spolupráci s firmami pričom získavajú praktické zručnosti a osvojujú si prístup, ktorým neskôr posunú svet technológií a celú spoločnosť vpred.</p>
+                    </div>
+                    <div class="studenske-projekty-slideshow">
 
+                        <p>Projekty študentov v <span>OpenLabe</span> </p>
+
+                        <div class="studenske-projekty-slide01">        
+                            <div class="studenske-projekty-slide01-text">
+                                <h3>Študentský projekt Mapovanie z HybridLabu</h3>
+                                <p>
+                                    Mapovanie je hybridná aplikácia, ktorá umožní ľuďom so spoločnými záľubami deliť sa o svoje obľúbené miesta a ukladať ich do komunitnej mapy. Aplikáciu tak môžu využívať ľudia z rôznych komunít. Užívateľ sa 
+                                    jednoducho pridá do skupiny, ktorá ho zaujíma, a následne môže vidieť už “zmapované” miesta alebo pridávať nové. Prehľad príspevkov a skupín mu zobrazuje dostupná mapa. Do aplikácie sa užívateľ vie prihlásiť
+                                    cez SSO, t.j. prihlásenie pomocou služby tretej strany, napr. Facebook alebo Apple ID účet. Na vývoj študenti použili technológie - Ionic, OctoberCMS a Vue. Aktuálne je aplikácia v MVP verzii.
+                                </p>
+                            </div>
+                            <div class="studenske-projekty-slide01-img">
+                                <figure>
+                                    <img src="https://img.youtube.com/vi/H1G1pAuRBtY/maxresdefault.jpg" alt="">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>         
+        </div>
+    </section>
 
 </body>
 
